[gd_scene load_steps=9 format=3 uid="uid://bb2lh56vedhkx"]

[ext_resource type="Script" path="res://pentagram.gd" id="1_gxkma"]
[ext_resource type="Texture2D" uid="uid://pww787do0exm" path="res://Assets/IMG_0908.PNG" id="1_lanlx"]
[ext_resource type="Script" path="res://Nodes/damage.gd" id="2_frdro"]
[ext_resource type="Texture2D" uid="uid://d3ivkbxc5t5dc" path="res://Assets/background.png" id="3_jfbav"]
[ext_resource type="Texture2D" uid="uid://dbq7u0t6kx67v" path="res://Assets/stripe.png" id="4_apajr"]
[ext_resource type="Texture2D" uid="uid://beg6mfvs0rlo1" path="res://Assets/progress.png" id="5_7dg5b"]

[sub_resource type="Resource" id="Resource_wifkt"]
script = ExtResource("2_frdro")
amount = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mo0v3"]
radius = 188.0
height = 614.0

[node name="Pentagram" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_gxkma")
damage = SubResource("Resource_wifkt")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -2
texture = ExtResource("1_lanlx")

[node name="SignSprite" type="Sprite2D" parent="."]
y_sort_enabled = true
offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mo0v3")

[node name="StandingTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -144.0
offset_top = -348.0
offset_right = 146.0
offset_bottom = -283.0
value = 100.0
texture_under = ExtResource("3_jfbav")
texture_over = ExtResource("4_apajr")
texture_progress = ExtResource("5_7dg5b")
texture_progress_offset = Vector2(2.08165e-12, 2.08165e-12)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="StandingTimer" to="." method="_on_standing_timer_timeout"]
